Basketball machine senser

--- a/content/2.Basketball machine Slider.html
+++ b/content/2.Basketball machine Slider.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,7 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7<br /><h1>stage2</h1><br />stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7</div>
+    <div id="tipue_search_content">1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot<br /><h1>2.Basketball machine Slider</h1>
+<p>圖檔:</p>
+<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
+<p></p>
+<p>籃框滑軌:</p>
+<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
+<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
+<p></p><br />1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot</div>
         
     <!-- footer -->
       <div class="container">
