--- a/content/4.Basketball machine Operation Manual.html
+++ b/content/4.Basketball machine Operation Manual.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,7 +134,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7<br /><h1>stage2</h1><br />stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7</div>
+    <div id="tipue_search_content">3.Basketball machine by MTB_Robot << <a href='3.Basketball machine by MTB_Robot.html'>Previous</a> <br /><h1>4.Basketball machine Operation Manual</h1>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
+<p></p>
+<p>up:擊球桿前進</p>
+<p>down:擊球桿後退</p>
+<p>r:產生球</p>
+<p>1:mtb_robot把球移動籃球機</p>
+<p>2:<span>mtb_robot回到原位</span></p>
+<p><span>z:吸球</span></p>
+<p><span>x:放球</span></p>
+<p>w:<span>mtb_robot逆時針轉</span></p>
+<p><span>s:<span>mtb_robot順時針轉</span></span></p>
+<div class="notranslate" style="all: initial;"></div><br />3.Basketball machine by MTB_Robot << <a href='3.Basketball machine by MTB_Robot.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
