--- a/content/W18.html
+++ b/content/W18.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li><a href='W18.html'>W18</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='1.Basketball machine senser.html'>1.Basketball machine senser</a><li><a href='2.Basketball machine Slider.html'>2.Basketball machine Slider</a><li><a href='3.Basketball machine by MTB_Robot.html'>3.Basketball machine by MTB_Robot</a><li><a href='4.Basketball machine Operation Manual.html'>4.Basketball machine Operation Manual</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,29 +134,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">40823152 << <a href='40823152.html'>Previous</a> <br /><h1>W18</h1>
-<p>圖檔:</p>
-<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
-<p>感測器:</p>
-<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
-<p>籃框滑軌:</p>
-<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
-<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p>完成品:</p>
-<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing">final Basketball-Machine</a></p>
+    <div id="tipue_search_content">40823152 << <a href='40823152.html'>Previous</a> <a href='1.Basketball machine senser.html'>Next</a> >> 1.Basketball machine senser<br /><h1>W18</h1>
 <p>小組產品:籃球機</p>
 <p>目的:stage2-12的籃球機加上感測器去計分和方軸使籃框左右移動，並且加入w16的Mtb_robot取放球。</p>
-<p>up:擊球桿前進</p>
-<p>down:擊球桿後退</p>
-<p>r:產生球</p>
-<p>1:mtb_robot把球移動籃球機</p>
-<p>2:<span>mtb_robot回到原位</span></p>
-<p><span>z:吸球</span></p>
-<p><span>x:放球</span></p>
-<p>w:<span>mtb_robot逆時針轉</span></p>
-<p><span>s:<span>mtb_robot順時針轉</span></span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p><br />40823152 << <a href='40823152.html'>Previous</a> </div>
+<p></p>
+<p><img alt="" height="246" src="./../images/Basketball machine3.1.png" width="400"/></p>
+<p>完成品:</p>
+<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="./../images/Basketball machine3.5.png" width="314"/></a></p>
+<p></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div><br />40823152 << <a href='40823152.html'>Previous</a> <a href='1.Basketball machine senser.html'>Next</a> >> 1.Basketball machine senser</div>
         
     <!-- footer -->
       <div class="container">
