--- a/config/content.htm
+++ b/config/content.htm
@@ -100,7 +100,7 @@
 <p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://40823153.github.io/cd2021">40823153 web</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
 <p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://40823125.github.io/cd2021">40823125 web</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
 <p><span><span> </span></span><a href="http://github.com/mde40823110/cd2021">40823110 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="http://mde40823110.github.io/cd2021">40823110 web</a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></p><h1>stage3</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組長：</span></span><a href="https://github.com/40823152/stage3-ag6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823152 repo </span></span></a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 web</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組長：</span></span><a href="https://github.com/mde40823152/stage3-ag6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823152 repo </span></span></a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://mde40823152.github.io/stage3-ag6/content/index.html">40823152 web</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">組員：</span></span></p>
 <p><a href="https://github.com/40823110/stage3-ag6">40823110 repo</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://40823110.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823110 web</span></span></a><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></p>
 <p><span><span></span></span><a href="https://github.com/40823125/stage3-ag6"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823125 repo</span></span></a><span><a href="https://github.com/40823125/stage3-ag6"><span> </span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span> </span></span><a href="https://40823125.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823125 web</span></span></a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">|</span></span></span></p>
@@ -1177,17 +1177,59 @@
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/0Lxmp-umL6U" width="560"></iframe></p>
 <p></p>
 <p><a href="https://github.com/mdecourse/cd2021/tree/main/downloads/stage3/MTB_robot">老師的leo</a></p><h1>W18</h1>
+<p>小組產品:籃球機</p>
+<p>目的:stage2-12的籃球機加上感測器去計分和方軸使籃框左右移動，並且加入w16的Mtb_robot取放球。</p>
+<p></p>
+<p><img alt="" height="246" src="/images/Basketball machine3.1.png" width="400"/></p>
+<p>完成品:</p>
+<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="/images/Basketball machine3.5.png" width="314"/></a></p>
+<p></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div><h2>1.Basketball machine senser</h2>
+<p></p>
+<p></p>
+<p>senser file link</p>
+<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="/images/Basketball_machine3.1.png" width="315"/></a></p>
+<p></p>
+<p>這是紅球的內部狀況</p>
+<p><img alt="" height="238" src="/images/Basketball_machine senser3.1-5.png" width="400"/></p>
+<p>裡面放一顆較小的綠球，因為紅球太大顆會導致感測器失靈，所以讓感測器去感測綠球就不會有這個問題</p>
+<p><img alt="" height="208" src="/images/Basketball_machine senser3.1-6.png" width="400"/></p>
+<p>感測器放了四根，呈現八角形讓感測器可以比較容易感測球</p>
+<p><img alt="" height="198" src="/images/Basketball_machine3.1-1.png" width="400"/></p>
+<p>當綠球觸碰到res、res0、res1抑或是res2</p>
+<p>那麼就會顯示1分</p>
+<p><img alt="" height="509" src="/images/Basketball_machine senser3.1-3.png" width="600"/></p>
+<p>這段程式是為了在製作感測器時能夠方便檢測，所以讓球重生再籃框上的位置</p>
+<p><img alt="" height="490" src="/images/Basketball_machine senser3.1-2.png" width="600"/></p>
+<p>畫面看起來會像這樣</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/9tTT-x8AhMs" title="YouTube video player" width="560"></iframe></p>
+<p></p><h2>2.Basketball machine Slider</h2>
 <p>圖檔:</p>
 <p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
-<p>感測器:</p>
-<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
+<p></p>
 <p>籃框滑軌:</p>
 <p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
 <p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p>完成品:</p>
-<p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing">final Basketball-Machine</a></p>
-<p>小組產品:籃球機</p>
-<p>目的:stage2-12的籃球機加上感測器去計分和方軸使籃框左右移動，並且加入w16的Mtb_robot取放球。</p>
+<p></p><h2>3.Basketball machine by MTB_Robot</h2>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p>籃框滑軌:</p>
+<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
+<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div><h2>4.Basketball machine Operation Manual</h2>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
+<p></p>
 <p>up:擊球桿前進</p>
 <p>down:擊球桿後退</p>
 <p>r:產生球</p>
@@ -1197,5 +1239,4 @@
 <p><span>x:放球</span></p>
 <p>w:<span>mtb_robot逆時針轉</span></p>
 <p><span>s:<span>mtb_robot順時針轉</span></span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p>
+<div class="notranslate" style="all: initial;"></div>
