--- a/content/1.Basketball machine senser.html
+++ b/content/1.Basketball machine senser.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,7 +134,26 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7<br /><h1>stage2</h1><br />stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7</div>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <a href='2.Basketball machine Slider.html'>Next</a> >> 2.Basketball machine Slider<br /><h1>1.Basketball machine senser</h1>
+<p></p>
+<p></p>
+<p>senser file link</p>
+<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="./../images/Basketball_machine3.1.png" width="315"/></a></p>
+<p></p>
+<p>這是紅球的內部狀況</p>
+<p><img alt="" height="238" src="./../images/Basketball_machine senser3.1-5.png" width="400"/></p>
+<p>裡面放一顆較小的綠球，因為紅球太大顆會導致感測器失靈，所以讓感測器去感測綠球就不會有這個問題</p>
+<p><img alt="" height="208" src="./../images/Basketball_machine senser3.1-6.png" width="400"/></p>
+<p>感測器放了四根，呈現八角形讓感測器可以比較容易感測球</p>
+<p><img alt="" height="198" src="./../images/Basketball_machine3.1-1.png" width="400"/></p>
+<p>當綠球觸碰到res、res0、res1抑或是res2</p>
+<p>那麼就會顯示1分</p>
+<p><img alt="" height="509" src="./../images/Basketball_machine senser3.1-3.png" width="600"/></p>
+<p>這段程式是為了在製作感測器時能夠方便檢測，所以讓球重生再籃框上的位置</p>
+<p><img alt="" height="490" src="./../images/Basketball_machine senser3.1-2.png" width="600"/></p>
+<p>畫面看起來會像這樣</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/9tTT-x8AhMs" title="YouTube video player" width="560"></iframe></p>
+<p></p><br />W18 << <a href='W18.html'>Previous</a> <a href='2.Basketball machine Slider.html'>Next</a> >> 2.Basketball machine Slider</div>
         
     <!-- footer -->
       <div class="container">
