--- a/content/3.Basketball machine by MTB_Robot.html
+++ b/content/3.Basketball machine by MTB_Robot.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,7 +134,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7<br /><h1>stage2</h1><br />stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='階段2-ag7.html'>Next</a> >> 階段2-ag7</div>
+    <div id="tipue_search_content">2.Basketball machine Slider << <a href='2.Basketball machine Slider.html'>Previous</a> <a href='4.Basketball machine Operation Manual.html'>Next</a> >> 4.Basketball machine Operation Manual<br /><h1>3.Basketball machine by MTB_Robot</h1>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p>籃框滑軌:</p>
+<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
+<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div><br />2.Basketball machine Slider << <a href='2.Basketball machine Slider.html'>Previous</a> <a href='4.Basketball machine Operation Manual.html'>Next</a> >> 4.Basketball machine Operation Manual</div>
         
     <!-- footer -->
       <div class="container">
