Basketball machine Slider

--- a/config/content.htm
+++ b/config/content.htm
@@ -1187,8 +1187,7 @@
 <p></p>
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div><h2>1.Basketball machine senser</h2>
-<p></p>
-<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x4-fqzVcYUA" title="YouTube video player" width="560"></iframe></p>
 <p>senser file link</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="/images/Basketball_machine3.1.png" width="315"/></a></p>
 <p></p>
@@ -1206,13 +1205,25 @@
 <p>畫面看起來會像這樣</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/9tTT-x8AhMs" title="YouTube video player" width="560"></iframe></p>
 <p></p><h2>2.Basketball machine Slider</h2>
-<p>圖檔:</p>
-<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
 <p></p>
-<p>籃框滑軌:</p>
-<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
-<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p></p><h2>3.Basketball machine by MTB_Robot</h2>
+<p></p>
+<p>圖檔:</p>
+<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing" title="籃球框圖檔"><img alt="" height="84" src="/images/籃球框圖檔.png" width="322"/></a></p>
+<p>slide file link</p>
+<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing" title="籃球框3.1.7z"><img alt="" height="77" src="/images/籃球框3.1.7z.png" width="318"/></a></p>
+<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing" title="籃球框3.2.7z"><img alt="" height="80" src="/images/籃球框3.2.7z.png" width="315"/></a></p>
+<p>當a==10時 會執行向左移動 直到d&lt;=-0.5</p>
+<p>d&lt;=-0.5時，會執行a=0，b=10</p>
+<p></p>
+<p>當b==10時 會執行向右移動 直到d&gt;=0.5</p>
+<p>d&gt;=0.5時，會執行a=10，b=0</p>
+<p></p>
+<p>a，b變數是用來判斷滑塊要向左或向右移動</p>
+<p>d是用來判斷座標點</p>
+<p>distance是用來給位移量</p>
+<p><img caption="false" height="506" src="/images/Basketball_machine slide3-2-1.mp4.png" width="600"/></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div><h2>3.Basketball machine by MTB_Robot</h2>
 <p></p>
 <p></p>
 <p></p>
