--- a/content/1.Basketball machine senser.html
+++ b/content/1.Basketball machine senser.html
@@ -135,8 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <a href='2.Basketball machine Slider.html'>Next</a> >> 2.Basketball machine Slider<br /><h1>1.Basketball machine senser</h1>
-<p></p>
-<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x4-fqzVcYUA" title="YouTube video player" width="560"></iframe></p>
 <p>senser file link</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="./../images/Basketball_machine3.1.png" width="315"/></a></p>
 <p></p>
