--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1188,21 +1188,43 @@
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div><h2>1.Basketball machine senser</h2>
 <p></p>
-<p>感測器:</p>
-<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
 <p></p>
 <p>senser file link</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="/images/Basketball_machine3.1.png" width="315"/></a></p>
 <p></p>
 <p>這是紅球的內部狀況</p>
+<p><img alt="" height="238" src="/images/Basketball_machine senser3.1-5.png" width="400"/></p>
+<p>裡面放一顆較小的綠球，因為紅球太大顆會導致感測器失靈，所以讓感測器去感測綠球就不會有這個問題</p>
+<p><img alt="" height="208" src="/images/Basketball_machine senser3.1-6.png" width="400"/></p>
+<p>感測器放了四根，呈現八角形讓感測器可以比較容易感測球</p>
+<p><img alt="" height="198" src="/images/Basketball_machine3.1-1.png" width="400"/></p>
+<p>當綠球觸碰到res、res0、res1抑或是res2</p>
+<p>那麼就會顯示1分</p>
+<p><img alt="" height="509" src="/images/Basketball_machine senser3.1-3.png" width="600"/></p>
+<p>這段程式是為了在製作感測器時能夠方便檢測，所以讓球重生再籃框上的位置</p>
+<p><img alt="" height="490" src="/images/Basketball_machine senser3.1-2.png" width="600"/></p>
+<p>畫面看起來會像這樣</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/9tTT-x8AhMs" title="YouTube video player" width="560"></iframe></p>
 <p></p><h2>2.Basketball machine Slider</h2>
-<p>圖檔:</p>
-<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
 <p></p>
-<p>籃框滑軌:</p>
-<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
-<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p></p><h2>3.Basketball machine by MTB_Robot</h2>
+<p></p>
+<p>圖檔:</p>
+<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing" title="籃球框圖檔"><img alt="" height="84" src="/images/籃球框圖檔.png" width="322"/></a></p>
+<p>slide file link</p>
+<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing" title="籃球框3.1.7z"><img alt="" height="77" src="/images/籃球框3.1.7z.png" width="318"/></a></p>
+<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing" title="籃球框3.2.7z"><img alt="" height="80" src="/images/籃球框3.2.7z.png" width="315"/></a></p>
+<p>當a==10時 會執行向左移動 直到d&lt;=-0.5</p>
+<p>d&lt;=-0.5時，會執行a=0，b=10</p>
+<p></p>
+<p>當b==10時 會執行向右移動 直到d&gt;=0.5</p>
+<p>d&gt;=0.5時，會執行a=10，b=0</p>
+<p></p>
+<p>a，b變數是用來判斷滑塊要向左或向右移動</p>
+<p>d是用來判斷座標點</p>
+<p>distance是用來給位移量</p>
+<p><img caption="false" height="506" src="/images/Basketball_machine slide3-2-1.mp4.png" width="600"/></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div><h2>3.Basketball machine by MTB_Robot</h2>
 <p></p>
 <p></p>
 <p></p>
