--- a/content/2.Basketball machine Slider.html
+++ b/content/2.Basketball machine Slider.html
@@ -135,13 +135,25 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot<br /><h1>2.Basketball machine Slider</h1>
-<p>圖檔:</p>
-<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing">籃球框圖檔</a></p>
 <p></p>
-<p>籃框滑軌:</p>
-<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
-<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p></p><br />1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot</div>
+<p></p>
+<p>圖檔:</p>
+<p><a href="https://drive.google.com/file/d/18ufn26kKP4-vsLFLgO7-eT8lV5dE_3lp/view?usp=sharing" title="籃球框圖檔"><img alt="" height="84" src="./../images/籃球框圖檔.png" width="322"/></a></p>
+<p>slide file link</p>
+<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing" title="籃球框3.1.7z"><img alt="" height="77" src="./../images/籃球框3.1.7z.png" width="318"/></a></p>
+<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing" title="籃球框3.2.7z"><img alt="" height="80" src="./../images/籃球框3.2.7z.png" width="315"/></a></p>
+<p>當a==10時 會執行向左移動 直到d&lt;=-0.5</p>
+<p>d&lt;=-0.5時，會執行a=0，b=10</p>
+<p></p>
+<p>當b==10時 會執行向右移動 直到d&gt;=0.5</p>
+<p>d&gt;=0.5時，會執行a=10，b=0</p>
+<p></p>
+<p>a，b變數是用來判斷滑塊要向左或向右移動</p>
+<p>d是用來判斷座標點</p>
+<p>distance是用來給位移量</p>
+<p><img caption="false" height="506" src="./../images/Basketball_machine slide3-2-1.mp4.png" width="600"/></p>
+<p></p>
+<div class="notranslate" style="all: initial;"></div><br />1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot</div>
         
     <!-- footer -->
       <div class="container">
