Basketball machine by (MTB_Robot)

--- a/content/3.Basketball machine by (MTB_Robot).html
+++ b/content/3.Basketball machine by (MTB_Robot).html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='1.Basketball machine senser.html'>1.Basketball machine senser</a><li><a href='2.Basketball machine Slider.html'>2.Basketball machine Slider</a><li><a href='3.Basketball machine by MTB_Robot.html'>3.Basketball machine by MTB_Robot</a><li><a href='4.Basketball machine Operation Manual.html'>4.Basketball machine Operation Manual</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='1.Basketball machine senser.html'>1.Basketball machine senser</a><li><a href='2.Basketball machine Slider.html'>2.Basketball machine Slider</a><li><a href='3.Basketball machine by (MTB_Robot).html'>3.Basketball machine by (MTB_Robot)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,21 +134,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">2.Basketball machine Slider << <a href='2.Basketball machine Slider.html'>Previous</a> <a href='4.Basketball machine Operation Manual.html'>Next</a> >> 4.Basketball machine Operation Manual<br /><h1>3.Basketball machine by MTB_Robot</h1>
+    <div id="tipue_search_content">2.Basketball machine Slider << <a href='2.Basketball machine Slider.html'>Previous</a> <br /><h1>3.Basketball machine by (MTB_Robot)</h1>
+<p>小組產品:籃球機<br/><br/>目標:把stage2-ag12的籃球機加入記分功能，籃框左右移動，fanuc_m710ic_50手臂投球，與最後才加的Mtb_robot取放球。<br/><br/>策略:<br/><br/>我們一次往3種方向去研究，不會使大家都研究同一項，結果最後還無法完成。因為只要有一項完成，我們的籃球機就有成果，且先完成的還能支援組員，使團隊更有效率。<br/><br/>工作分配:1人籃球框移動程式，1人畫圖，2人感測器，2人機械手臂組裝，2人機械手臂控制。<br/><br/>困難點:<br/><br/>時間與技術的不足，fanuc_m710ic_50手臂無法有效地做出投球的動作，目前只能簡單轉動單一軸的控制，理想狀態是:取到球後手臂做出投球一半的動作時，關閉氣壓缸，使球產生速度投進籃框裡。</p>
 <p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p>籃框滑軌:</p>
-<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
-<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<p>操作說明</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
+<p>鍵盤操作</p>
+<p><img alt="" height="557" src="./../images/鍵盤圖1.jpg" width="500"/></p>
 <div class="notranslate" style="all: initial;"></div>
-<div class="notranslate" style="all: initial;"></div><br />2.Basketball machine Slider << <a href='2.Basketball machine Slider.html'>Previous</a> <a href='4.Basketball machine Operation Manual.html'>Next</a> >> 4.Basketball machine Operation Manual</div>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div><br />2.Basketball machine Slider << <a href='2.Basketball machine Slider.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
