--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1187,8 +1187,7 @@
 <p></p>
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div><h2>1.Basketball machine senser</h2>
-<p></p>
-<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x4-fqzVcYUA" title="YouTube video player" width="560"></iframe></p>
 <p>senser file link</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="/images/Basketball_machine3.1.png" width="315"/></a></p>
 <p></p>
@@ -1224,31 +1223,13 @@
 <p>distance是用來給位移量</p>
 <p><img caption="false" height="506" src="/images/Basketball_machine slide3-2-1.mp4.png" width="600"/></p>
 <p></p>
-<div class="notranslate" style="all: initial;"></div><h2>3.Basketball machine by MTB_Robot</h2>
+<div class="notranslate" style="all: initial;"></div><h1>3.Basketball machine by (MTB_Robot)</h1>
+<p>小組產品:籃球機<br/><br/>目標:把stage2-ag12的籃球機加入記分功能，籃框左右移動，fanuc_m710ic_50手臂投球，與最後才加的Mtb_robot取放球。<br/><br/>策略:<br/><br/>我們一次往3種方向去研究，不會使大家都研究同一項，結果最後還無法完成。因為只要有一項完成，我們的籃球機就有成果，且先完成的還能支援組員，使團隊更有效率。<br/><br/>工作分配:1人籃球框移動程式，1人畫圖，2人感測器，2人機械手臂組裝，2人機械手臂控制。<br/><br/>困難點:<br/><br/>時間與技術的不足，fanuc_m710ic_50手臂無法有效地做出投球的動作，目前只能簡單轉動單一軸的控制，理想狀態是:取到球後手臂做出投球一半的動作時，關閉氣壓缸，使球產生速度投進籃框裡。</p>
 <p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p>籃框滑軌:</p>
-<p><a href="https://drive.google.com/file/d/1u6epma_WaJ0zNhJy27QHzvPD9I0Ar_ly/view?usp=sharing">籃球框3.1.7z</a></p>
-<p><a href="https://drive.google.com/file/d/1dtXe2oAUYMcQbaaZTlia07DERVJ2DiG3/view?usp=sharing">籃球框3.2.7z</a></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<div class="notranslate" style="all: initial;"></div>
-<div class="notranslate" style="all: initial;"></div><h2>4.Basketball machine Operation Manual</h2>
-<p></p>
+<p>操作說明</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
-<p></p>
-<p>up:擊球桿前進</p>
-<p>down:擊球桿後退</p>
-<p>r:產生球</p>
-<p>1:mtb_robot把球移動籃球機</p>
-<p>2:<span>mtb_robot回到原位</span></p>
-<p><span>z:吸球</span></p>
-<p><span>x:放球</span></p>
-<p>w:<span>mtb_robot逆時針轉</span></p>
-<p><span>s:<span>mtb_robot順時針轉</span></span></p>
+<p>鍵盤操作</p>
+<p><img alt="" height="557" src="/images/鍵盤圖1.jpg" width="500"/></p>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div>
