--- a/content/2.Basketball machine Slider.html
+++ b/content/2.Basketball machine Slider.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='1.Basketball machine senser.html'>1.Basketball machine senser</a><li><a href='2.Basketball machine Slider.html'>2.Basketball machine Slider</a><li><a href='3.Basketball machine by MTB_Robot.html'>3.Basketball machine by MTB_Robot</a><li><a href='4.Basketball machine Operation Manual.html'>4.Basketball machine Operation Manual</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Collaborative flowchart.html'>Collaborative flowchart</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='階段2-ag7.html'>階段2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='任務1.html'>任務1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a><li><a href='40823152-1.html'>40823152-1</a></li></ul><li class='has-children'><a href='任務 2.html'>任務 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a><li><a href='40823152-2.html'>40823152-2</a></li></ul><li class='has-children'><a href='w16-exam.html'>w16-exam</a><ul class='dropdown'><li><a href='40823125.html'>40823125</a><li><a href='40823122.html'>40823122</a><li><a href='40823152.html'>40823152</a></li></li></ul></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='1.Basketball machine senser.html'>1.Basketball machine senser</a><li><a href='2.Basketball machine Slider.html'>2.Basketball machine Slider</a><li><a href='3.Basketball machine by (MTB_Robot).html'>3.Basketball machine by (MTB_Robot)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot<br /><h1>2.Basketball machine Slider</h1>
+    <div id="tipue_search_content">1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by (MTB_Robot).html'>Next</a> >> 3.Basketball machine by (MTB_Robot)<br /><h1>2.Basketball machine Slider</h1>
 <p></p>
 <p></p>
 <p>圖檔:</p>
@@ -153,7 +153,7 @@ img.add_border {
 <p>distance是用來給位移量</p>
 <p><img caption="false" height="506" src="./../images/Basketball_machine slide3-2-1.mp4.png" width="600"/></p>
 <p></p>
-<div class="notranslate" style="all: initial;"></div><br />1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by MTB_Robot.html'>Next</a> >> 3.Basketball machine by MTB_Robot</div>
+<div class="notranslate" style="all: initial;"></div><br />1.Basketball machine senser << <a href='1.Basketball machine senser.html'>Previous</a> <a href='3.Basketball machine by (MTB_Robot).html'>Next</a> >> 3.Basketball machine by (MTB_Robot)</div>
         
     <!-- footer -->
       <div class="container">
