Basketball machine by (MTB_Robot)

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -16,7 +16,9 @@
 <p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo</a> <span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span><a href="https://40823129.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;">40823129 web</span></a><span style="vertical-align: inherit;"> </span><span style="vertical-align: inherit;">|</span></span><span></span><a href="https://40823129.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"></span></a><span></span><span style="vertical-align: inherit;"></span></span></p>
 <p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo</a> <span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span><a href="https://40823149.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;">40823149 web</span></a><span style="vertical-align: inherit;"> </span><span style="vertical-align: inherit;">|</span></span><span></span><a href="https://40823149.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"></span><span></span></a><span style="vertical-align: inherit;"></span></span></p>
 <p><span></span><a href="https://github.com/mde40823152/stage3-ag6">40823152 repo</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://mde40823152.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823152 web</span></span></a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
-<p><span><span></span></span><a href="https://github.com/40823153/stage3-ag6">40823153 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span></span></span><a href="https://40823153.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823153 web</span></span></a><span><span> |</span></span></p><h1>Collaborative flowchart</h1>
+<p><span><span></span></span><a href="https://github.com/40823153/stage3-ag6">40823153 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span></span></span><a href="https://40823153.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823153 web</span></span></a><span><span> |</span></span></p>
+<p><span><span>gogs :</span></span></p>
+<p><span><span><a href="https://fossil.kmol.info:3443/40823125/stage3-ag6">stage3-ag6 repo</a></span></span></p><h1>Collaborative flowchart</h1>
 <p><span>我認為藉由此流程圖可以降低內容互相覆蓋，最終造成無法辨識是誰更改內容的情況。</span></p>
 <p><span>每一位協同者製作與更改的項目都會顯示在上面，還能輕易地找出之前所做的每一項目和誰有在做事。</span></p>
 <p><img caption="false" height="381" src="/images/Untitled Diagram.png" width="550"/></p>
@@ -1177,14 +1179,14 @@
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/0Lxmp-umL6U" width="560"></iframe></p>
 <p></p>
 <p><a href="https://github.com/mdecourse/cd2021/tree/main/downloads/stage3/MTB_robot">老師的leo</a></p><h1>W18</h1>
-<p>小組產品:籃球機</p>
-<p>目的:stage2-12的籃球機加上感測器去計分和方軸使籃框左右移動，並且加入w16的Mtb_robot取放球。</p>
+<p>小組產品:籃球機<br/><br/>目標:把stage2-ag12的籃球機加入記分功能，籃框左右移動，fanuc_m710ic_50手臂投球，與最後才加的Mtb_robot取放球。<br/><br/>策略:<br/><br/>我們一次往3種方向去研究，不會使大家都研究同一項，結果最後還無法完成。因為只要有一項完成，我們的籃球機就有成果，且先完成的還能支援組員，使團隊更有效率。<br/><br/>工作分配:1人籃球框移動程式，1人畫圖，2人感測器，2人機械手臂組裝，2人機械手臂控制。<br/><br/>困難點:<br/><br/>時間與技術的不足，fanuc_m710ic_50手臂無法有效地做出投球的動作，目前只能簡單轉動單一軸的控制，理想狀態是:取到球後手臂做出投球一半的動作時，關閉氣壓缸，使球產生速度投進籃框裡。</p>
 <p></p>
 <p><img alt="" height="246" src="/images/Basketball machine3.1.png" width="400"/></p>
 <p>完成品:</p>
 <p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="/images/Basketball machine3.5.png" width="314"/></a></p>
 <p></p>
 <p></p>
+<div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div><h2>1.Basketball machine senser</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x4-fqzVcYUA" title="YouTube video player" width="560"></iframe></p>
@@ -1223,13 +1225,16 @@
 <p>distance是用來給位移量</p>
 <p><img caption="false" height="506" src="/images/Basketball_machine slide3-2-1.mp4.png" width="600"/></p>
 <p></p>
-<div class="notranslate" style="all: initial;"></div><h1>3.Basketball machine by (MTB_Robot)</h1>
-<p>小組產品:籃球機<br/><br/>目標:把stage2-ag12的籃球機加入記分功能，籃框左右移動，fanuc_m710ic_50手臂投球，與最後才加的Mtb_robot取放球。<br/><br/>策略:<br/><br/>我們一次往3種方向去研究，不會使大家都研究同一項，結果最後還無法完成。因為只要有一項完成，我們的籃球機就有成果，且先完成的還能支援組員，使團隊更有效率。<br/><br/>工作分配:1人籃球框移動程式，1人畫圖，2人感測器，2人機械手臂組裝，2人機械手臂控制。<br/><br/>困難點:<br/><br/>時間與技術的不足，fanuc_m710ic_50手臂無法有效地做出投球的動作，目前只能簡單轉動單一軸的控制，理想狀態是:取到球後手臂做出投球一半的動作時，關閉氣壓缸，使球產生速度投進籃框裡。</p>
+<div class="notranslate" style="all: initial;"></div><h2>3.Basketball machine by (MTB_Robot)</h2>
+<p>使用老師的ik程式，使Mtb_robot放球到最終的位置(x=1.002,y=0)<br/><br/>但是把MTB_robot放到籃球機的場景裡，不能直接在程式裡打ik(1.002,0)，因為MTB_robot沒有在座標原點上，所以要減掉MTB_robot的座標(0.7496,-2.3502)，得出(0.2506,2.3502)，才會移動到正確的座標。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/b6ULHTMFeOQ" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p>操作說明</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aB3qmGUtIP8" width="560"></iframe></p>
 <p>鍵盤操作</p>
 <p><img alt="" height="557" src="/images/鍵盤圖1.jpg" width="500"/></p>
+<div class="notranslate" style="all: initial;"></div>
+<div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div>
