--- a/content/W18.html
+++ b/content/W18.html
@@ -135,14 +135,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">40823152 << <a href='40823152.html'>Previous</a> <a href='1.Basketball machine senser.html'>Next</a> >> 1.Basketball machine senser<br /><h1>W18</h1>
-<p>小組產品:籃球機</p>
-<p>目的:stage2-12的籃球機加上感測器去計分和方軸使籃框左右移動，並且加入w16的Mtb_robot取放球。</p>
+<p>小組產品:籃球機<br/><br/>目標:把stage2-ag12的籃球機加入記分功能，籃框左右移動，fanuc_m710ic_50手臂投球，與最後才加的Mtb_robot取放球。<br/><br/>策略:<br/><br/>我們一次往3種方向去研究，不會使大家都研究同一項，結果最後還無法完成。因為只要有一項完成，我們的籃球機就有成果，且先完成的還能支援組員，使團隊更有效率。<br/><br/>工作分配:1人籃球框移動程式，1人畫圖，2人感測器，2人機械手臂組裝，2人機械手臂控制。<br/><br/>困難點:<br/><br/>時間與技術的不足，fanuc_m710ic_50手臂無法有效地做出投球的動作，目前只能簡單轉動單一軸的控制，理想狀態是:取到球後手臂做出投球一半的動作時，關閉氣壓缸，使球產生速度投進籃框裡。</p>
 <p></p>
 <p><img alt="" height="246" src="./../images/Basketball machine3.1.png" width="400"/></p>
 <p>完成品:</p>
 <p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="./../images/Basketball machine3.5.png" width="314"/></a></p>
 <p></p>
 <p></p>
+<div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div>
 <div class="notranslate" style="all: initial;"></div><br />40823152 << <a href='40823152.html'>Previous</a> <a href='1.Basketball machine senser.html'>Next</a> >> 1.Basketball machine senser</div>
         
