update README for gitlab web link and about add gitlab web link

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -18,7 +18,8 @@
 <p><span></span><a href="https://github.com/mde40823152/stage3-ag6">40823152 repo</a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> | </span></span></span><a href="https://mde40823152.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823152 web</span></span></a><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> |</span></span></span></p>
 <p><span><span></span></span><a href="https://github.com/40823153/stage3-ag6">40823153 repo</a><span><span> </span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">| </span></span><span></span></span><a href="https://40823153.github.io/stage3-ag6/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40823153 web</span></span></a><span><span> |</span></span></p>
 <p><span><span>gogs :</span></span></p>
-<p><span><span><a href="https://fossil.kmol.info:3443/40823125/stage3-ag6">stage3-ag6 repo</a></span></span></p><h1>Collaborative flowchart</h1>
+<p><span><span><a href="https://fossil.kmol.info:3443/40823125/stage3-ag6">stage3-ag6 repo</a></span></span></p>
+<div class="notranslate" style="all: initial;"></div><h1>Collaborative flowchart</h1>
 <p><span>我認為藉由此流程圖可以降低內容互相覆蓋，最終造成無法辨識是誰更改內容的情況。</span></p>
 <p><span>每一位協同者製作與更改的項目都會顯示在上面，還能輕易地找出之前所做的每一項目和誰有在做事。</span></p>
 <p><img caption="false" height="381" src="/images/Untitled Diagram.png" width="550"/></p>
